1.8.5
-----
1. Better redhat icon.
2. Map icons for 'Sounds & Effects', Napster, and SHOUTcast.
3. Fix showing folder icon for favourites folder.
4. Allow navigating into empty favourites folder.
5. Re-filter jumplist on window height changes.
6. Show a message when rescan activated.

1.8.4
-----
1. Fix some text colours in updates page.
2. Remove (?) icons from plugins in information dialog, and make complete
   plugin title clickable.
3. Place cog icon next to 'My Music' text in 'Settings' dialog.
4. Remove shadow from emblems in lists.
5. Allow grid for favourites.

1.8.3
-----
 1. Show hover buttons for favourites, even if first favourite is a folder.
 2. Add option to rename podcast.
 3. Add ability for APK app to control all, or active, player during call.
 4. List players on mysqueezebox.com
 5. Simplify moving code to move player from other server, only need to issue
    'disconnect' command.
 6. Place add/play hover buttons on right hand side of grid items.
 7. Fix saving favourites of items that have additional attributes - e.g.
    Radio.net stations.
 8. Allow hover buttons for most items with a play action.
 9. Add add/play-all to subtoolbar if there are 3..200 items with a play action.
10. Add 'Copy details' to now-playing context menu - places 'Playing SONG by
    ARTIST from ALBUM' onto clipboard.
11. Use 'Roboto Mono' for desktop bottom bar details.
12. Remove list pad for iOS devices.
13. Scroll to top of grid/list when change view type. Seems to improve
    performance on iOS?
14. Use unfilled circle for inactive items in jumplist where there is no key
    when using list as well as grid.
15. Fix missing dividers in 'Settings' and 'Player settings' dialogs.
16. Add 'Smart crossfade' to 'Player settings' dialog.
17. Only update changed player settings.
18. When building a list command use roles and parent ID from parent command
    rather than recreating parent command.

1.8.2
-----
 1. Fix hovering of items in grid when items have no sub-title.