@@ -6,6 +6,7 @@
 4. Allow navigating into empty favourites folder.
 5. Re-filter jumplist on window height changes.
 6. Show a message when rescan activated.
+7. Add API to get list of active (on and playing) players.
 
 1.8.4
 -----
